docs: :white_check_mark: Cambios minimos de comentarios

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=
-DB_NAME=productsdb
-DB_PORT=33065
-PORT=4000
+DB_HOST=localhost // Cambiar al host de la base de datos 
+DB_USER=root // Cambiar al usuario de la base de datos 
+DB_PASS= // Cambiar a la contraseña de la base de datos 
+DB_NAME=productsdb // Cambiar al nombre de la base de datos 
+DB_PORT=33065 // Cambiar al puerto de la base de datos 
+PORT=4000 // Cambiar al puerto del servidor 
